# license_page

./: Cargo.toml  README.md
data/: choosealicense.com_licenses.rs  harvest_licenses.sh
data/choosealicense.com_licenses/: afl-3.0.txt  agpl-3.0.txt  artistic-2.0.txt  blueoak-1.0.0.txt  bsd-2-clause-patent.txt  bsd-2-clause.txt  bsd-3-clause-clear.txt  bsd-4-clause.txt  cc-by-sa-4.0.txt  cern-ohl-p-2.0.txt  cern-ohl-s-2.0.txt  cern-ohl-w-2.0.txt  ecl-2.0.txt  epl-1.0.txt  epl-2.0.txt  eupl-1.1.txt  eupl-1.2.txt  gfdl-1.3.txt  gpl-2.0.txt  isc.txt  lgpl-2.1.txt  lgpl-3.0.txt  lppl-1.3c.txt  mit-0.txt  mpl-2.0.txt  ms-pl.txt  mulanpsl-2.0.txt  ncsa.txt  odbl-1.0.txt  osl-3.0.txt  postgresql.txt  vim.txt  wtfpl.txt
license_page_cli/: Cargo.toml
license_page_cli/src/: main.rs
src/: lib.rs  main.rs  opt.rs
