[package]
name = "license_page"
description = "A crate for generating dependency license pages"
authors = ["RemasteredArch"]
repository = "https://github.com/RemasteredArch/license_page"
readme = true
license = "MPL-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
spdx = { version = "0.10.8", features = ["text"] }
