[package]
name = "license_page"
description = "A crate for generating dependency license pages"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[workspace]
package.authors = ["RemasteredArch"]
package.repository = "https://github.com/RemasteredArch/license_page"
package.readme = true
package.publish = false
package.license = "MPL-2.0"
package.edition = "2024"

members = ["license_page_cli"]

[workspace.lints]
clippy.nursery = "warn"
clippy.pedantic = "warn"

[dependencies]
# Temporarily pull in `cargo-license` as a Git dependency. Upstream `cargo-license` is subject to
# [`RUSTSEC-2021-0139`] (`ansi_term` is unmaintained), so we're temporarily tracking the Git branch
# of [a pull request] that replaces it with `anstyle`. For future reference, this is branched off of
# `onur/cargo-license#fdae4b4`, which is seven commits ahead of `v0.6.1`.
#
# [`RUSTSEC-2021-0139`]: <https://rustsec.org/advisories/RUSTSEC-2021-0139.html>
# [a pull request]: <https://github.com/onur/cargo-license/pull/84>
cargo-license = { git = "https://github.com/Nitrokey/cargo-license", rev = "6c490f126506c400dcd6e7b7f62b216aafca3258" }
# Held back to `v0.20.0` to match the version used by `cargo-license`.
cargo_metadata = "0.20.0"
spdx = { version = "0.10.8", features = ["text"] }
