[package]
name = "license_page_cli"
description = "A CLI for generating dependency license pages"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
license_page = { path = ".." }
